syntax = "proto3";

package grpc.examples.echo;

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service Echo {
    rpc UnaryEcho(EchoRequest)  returns (EchoRequest) {}
    rpc ServerStreamingEcho(EchoRequest)    returns (EchoResponse) {}
    rpc ClientStreamingEcho(EchoRequest)    returns (EchoResponse) {}
    rpc BidirectionalStreamingEcho(stream EchoRequest)  returns (EchoResponse) {}
}
